<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:text="@string/create_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingStart="30dp"/>
    
    <FrameLayout
        android:id="@+id/project_config_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">
            
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        
            <EditText
                android:id="@+id/project_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="My Application"
                android:drawableStart="@drawable/ic_android"
                android:drawablePadding="13dp"
                android:hint="@string/project_name"
                android:inputType="text"
                android:importantForAutofill="no"/>
        
        </com.google.android.material.textfield.TextInputLayout>
    
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="80dp">
        
            <EditText
                android:id="@+id/package_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="com.example.myapplication"
                android:drawableStart="@drawable/ic_package_2"
                android:drawablePadding="13dp"
                android:hint="@string/package_name"
                android:inputType="text"
                android:importantForAutofill="no"/>
        
        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="160dp">
        
            <EditText
                android:id="@+id/project_path_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/storage/emulated/0/SquareIDEProjects/My Application"
                android:drawableStart="@drawable/ic_folder"
                android:drawablePadding="13dp"
                android:hint="@string/project_path"
                android:inputType="text"
                android:importantForAutofill="no"/>
        
        </com.google.android.material.textfield.TextInputLayout>
    </FrameLayout>
    
    <FrameLayout
        android:id="@+id/project_step_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="520dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            style="?attr/materialButtonOutlinedStyle"/>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="160dp">
        
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/create"/>
        
        </FrameLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>